--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,120 @@
-demucs
-soundfile
-scipy
-numpy
-logging
-fastmcp
-asyncio
-pydantic
-pydantic-core
+accelerate==1.12.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.11.0
+APScheduler==3.11.2
+asttokens==3.0.1
+audioop-lts==0.2.2
+audioread==3.1.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
+debugpy==1.8.19
+decorator==5.2.1
+dotenv==0.9.9
+executing==2.2.1
+fastapi==0.124.2
+ffmpeg==1.4
+filelock==3.20.2
+fonttools==4.61.0
+fsspec==2025.12.0
+greenlet==3.2.4
+gunicorn==21.2.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.27.2
+huggingface-hub==0.36.0
+idna==3.11
+iniconfig==2.3.0
+ipykernel==7.1.0
+ipython==9.9.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.4.2
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+kiwisolver==1.4.9
+lazy_loader==0.4
+librosa==0.11.0
+lightgbm==4.1.0
+llvmlite==0.46.0
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+mpmath==1.3.0
+msgpack==1.1.2
+nest-asyncio==1.6.0
+networkx==3.6.1
+nflreadpy==0.1.5
+numba==0.63.1
+numpy==2.3.5
+ollama==0.6.1
+packaging==25.0
+pandas==2.3.3
+parso==0.8.5
+pillow==12.0.0
+platformdirs==4.5.1
+pluggy==1.6.0
+polars==1.36.1
+polars-runtime-32==1.36.1
+pooch==1.9.0
+prompt_toolkit==3.0.52
+psutil==7.2.1
+pure_eval==0.2.3
+pyarrow==18.1.0
+pycparser==3.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+Pygments==2.19.2
+pyloudnorm==0.2.0
+pyparsing==3.2.5
+pytest==7.4.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+regex==2025.11.3
+requests==2.32.5
+resampy==0.4.3
+safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.16.3
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+soundfile==0.13.1
+soxr==1.0.0
+SQLAlchemy==2.0.44
+sqlmodel==0.0.27
+stack-data==0.6.3
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+standard-sunau==3.13.0
+starlette==0.50.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.2
+torch==2.9.1
+tornado==6.5.4
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.57.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.6.2
+uvicorn==0.24.0.post1
+watchfiles==1.1.1
+wcwidth==0.3.5
+websockets==15.0.1
