--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 accelerate==1.12.0
+aiofile==3.9.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 APScheduler==3.11.2
 asttokens==3.0.1
+attrs==25.4.0
 audioop-lts==0.2.2
 audioread==3.1.0
+Authlib==1.6.8
+beartype==0.22.9
+cachetools==7.0.1
+caio==0.9.25
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
@@ -13,12 +19,20 @@ click==8.3.0
 colorama==0.4.6
 comm==0.2.3
 contourpy==1.3.3
+cryptography==46.0.5
 cycler==0.12.1
+cyclopts==4.6.0
 debugpy==1.8.19
 decorator==5.2.1
+dnspython==2.8.0
+docstring_parser==0.17.0
+docutils==0.22.4
 dotenv==0.9.9
+email-validator==2.3.0
+exceptiongroup==1.3.1
 executing==2.2.1
 fastapi==0.124.2
+fastmcp==3.0.2
 ffmpeg==1.4
 filelock==3.20.2
 fonttools==4.61.0
@@ -28,26 +42,40 @@ gunicorn==21.2.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
-httpx==0.27.2
+httpx==0.28.1
+httpx-sse==0.4.3
 huggingface-hub==0.36.0
 idna==3.11
+importlib_metadata==8.7.1
 iniconfig==2.3.0
 ipykernel==7.1.0
 ipython==9.9.0
 ipython_pygments_lexers==1.1.1
+jaraco.classes==3.4.0
+jaraco.context==6.1.0
+jaraco.functools==4.4.0
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.4.2
+jsonref==1.1.0
+jsonschema==4.26.0
+jsonschema-path==0.4.2
+jsonschema-specifications==2025.9.1
 jupyter_client==8.8.0
 jupyter_core==5.9.1
+keyring==25.7.0
 kiwisolver==1.4.9
 lazy_loader==0.4
 librosa==0.11.0
 lightgbm==4.1.0
 llvmlite==0.46.0
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.8
 matplotlib-inline==0.2.1
+mcp==1.26.0
+mdurl==0.1.2
+more-itertools==10.8.0
 mpmath==1.3.0
 msgpack==1.1.2
 nest-asyncio==1.6.0
@@ -56,9 +84,12 @@ nflreadpy==0.1.5
 numba==0.63.1
 numpy==2.3.5
 ollama==0.6.1
+openapi-pydantic==0.5.1
+opentelemetry-api==1.39.1
 packaging==25.0
 pandas==2.3.3
 parso==0.8.5
+pathable==0.5.0
 pillow==12.0.0
 platformdirs==4.5.1
 pluggy==1.6.0
@@ -68,24 +99,33 @@ pooch==1.9.0
 prompt_toolkit==3.0.52
 psutil==7.2.1
 pure_eval==0.2.3
+py-key-value-aio==0.4.4
 pyarrow==18.1.0
 pycparser==3.0
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.11.0
 pyloudnorm==0.2.0
 pyparsing==3.2.5
+pyperclip==1.11.0
 pytest==7.4.4
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+python-dotenv==1.2.1
 python-multipart==0.0.20
 pytz==2025.2
+pywin32==311
+pywin32-ctypes==0.2.3
 PyYAML==6.0.3
 pyzmq==27.1.0
+referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
 resampy==0.4.3
+rich==14.3.3
+rich-rst==1.3.2
+rpds-py==0.30.0
 safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.16.3
@@ -96,6 +136,7 @@ soundfile==0.13.1
 soxr==1.0.0
 SQLAlchemy==2.0.44
 sqlmodel==0.0.27
+sse-starlette==3.2.0
 stack-data==0.6.3
 standard-aifc==3.13.0
 standard-chunk==3.13.0
@@ -114,7 +155,8 @@ typing_extensions==4.15.0
 tzdata==2025.2
 tzlocal==5.3.1
 urllib3==2.6.2
-uvicorn==0.24.0.post1
+uvicorn==0.41.0
 watchfiles==1.1.1
 wcwidth==0.3.5
 websockets==15.0.1
+zipp==3.23.0
