--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,14 @@ annotated-types==0.7.0
 anyio==4.11.0
 APScheduler==3.11.2
 asttokens==3.0.1
-attrs==25.4.0
+attrs
 audioread==3.1.0
 Authlib==1.6.8
 beartype==0.22.9
 cachetools==7.0.1
 caio==0.9.25
-certifi==2025.11.12
-cffi==2.0.0
-charset-normalizer==3.4.4
+certifi1.12
+cfficharset-normalizer==3.4.4
 click==8.3.0
 colorama==0.4.6
 comm==0.2.3
@@ -23,21 +22,18 @@ cycler==0.12.1
 cyclopts==4.6.0
 debugpy==1.8.19
 decorator==5.2.1
-dnspython==2.8.0
-docstring_parser==0.17.0
+dnspythondocstring_parser==0.17.0
 docutils==0.22.4
 dotenv==0.9.9
-email-validator==2.3.0
-exceptiongroup==1.3.1
-executing==2.2.1
-fastapi==0.124.2
-fastmcp==3.0.2
-ffmpeg==1.4
+email-validatorexceptiongroup==1.3.1
+executingfastapi==0.124.2
+fastmcp
+ffmpeg
 filelock==3.20.2
 fonttools==4.61.0
-fsspec==2025.12.0
+fsspec2.0
 greenlet==3.2.4
-gunicorn==21.2.0
+gunicorn
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -46,8 +42,7 @@ httpx-sse==0.4.3
 huggingface-hub==0.36.0
 idna==3.11
 importlib_metadata==8.7.1
-iniconfig==2.3.0
-ipykernel==7.1.0
+iniconfigipykernel==7.1.0
 ipython==9.9.0
 ipython_pygments_lexers==1.1.1
 jaraco.classes==3.4.0
@@ -59,10 +54,10 @@ joblib==1.4.2
 jsonref==1.1.0
 jsonschema==4.26.0
 jsonschema-path==0.4.2
-jsonschema-specifications==2025.9.1
+jsonschema-specifications.1
 jupyter_client==8.8.0
 jupyter_core==5.9.1
-keyring==25.7.0
+keyring
 kiwisolver==1.4.9
 lazy_loader==0.4
 librosa==0.11.0
@@ -72,7 +67,7 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.8
 matplotlib-inline==0.2.1
-mcp==1.26.0
+mcp
 mdurl==0.1.2
 more-itertools==10.8.0
 mpmath==1.3.0
@@ -81,46 +76,37 @@ nest-asyncio==1.6.0
 networkx==3.6.1
 
 numba==0.63.1
-numpy==2.3.5
-
+numpy
 openapi-pydantic==0.5.1
 opentelemetry-api==1.39.1
-packaging==25.0
-pandas==2.3.3
-parso==0.8.5
+packagingandasparso==0.8.5
 pathable==0.5.0
 pillow==12.0.0
 platformdirs==4.5.1
-pluggy==1.6.0
-polars==1.36.1
-polars-runtime-32==1.36.1
-pooch==1.9.0
-prompt_toolkit==3.0.52
+pluggy==1.6.0prompt_toolkit==3.0.52
 psutil==7.2.1
 pure_eval==0.2.3
 py-key-value-aio==0.4.4
 pyarrow==18.1.0
 pycparser==3.0
-pydantic==2.12.5
-pydantic-settings==2.12.0
-pydantic_core==2.41.5
-Pygments==2.19.2
-PyJWT==2.11.0
-pyloudnorm==0.2.0
+pydantic
+pydantic-settings
+pydantic_core
+Pygments
+PyJWT
+pyloudnorm
 pyparsing==3.2.5
 pyperclip==1.11.0
 pytest==7.4.4
-python-dateutil==2.9.0.post0
+python-dateutil
 python-dotenv==1.2.1
 python-multipart==0.0.20
-pytz==2025.2
-
-
+pytz
 PyYAML==6.0.3
-pyzmq==27.1.0
+pyzmq
 referencing==0.37.0
-regex==2025.11.3
-requests==2.32.5
+regex
+requests
 resampy==0.4.3
 rich==14.3.3
 rich-rst==1.3.2
@@ -133,29 +119,24 @@ six==1.17.0
 sniffio==1.3.1
 soundfile==0.13.1
 soxr==1.0.0
-SQLAlchemy==2.0.44
+SQLAlchemy
 sqlmodel==0.0.27
 sse-starlette==3.2.0
-stack-data==0.6.3
-standard-aifc==3.13.0
-standard-chunk==3.13.0
-standard-sunau==3.13.0
 starlette==0.50.0
 sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.22.2
-torch==2.9.1
-tornado==6.5.4
+torchtornado==6.5.4
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.57.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.2
+tzdata
 tzlocal==5.3.1
-urllib3==2.6.2
-uvicorn==0.41.0
+urllib3uvicorn==0.41.0
 watchfiles==1.1.1
 wcwidth==0.3.5
 websockets==15.0.1
 zipp==3.23.0
+demucs
