--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,53 @@
-accelerate==1.12.0
-aiofile==3.9.0
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.11.0
-APScheduler==3.11.2
-asttokens==3.0.1
+annotated-doc
+annotated-types
+anyio
+APScheduler
+asttokens
 attrs
-audioread==3.1.0
-Authlib==1.6.8
-beartype==0.22.9
-cachetools==7.0.1
-caio==0.9.25
-certifi1.12
-cfficharset-normalizer==3.4.4
-click==8.3.0
-colorama==0.4.6
-comm==0.2.3
-contourpy==1.3.3
-cryptography==46.0.5
-cycler==0.12.1
-cyclopts==4.6.0
-debugpy==1.8.19
-decorator==5.2.1
-dnspythondocstring_parser==0.17.0
-docutils==0.22.4
-dotenv==0.9.9
-fastapi==0.124.2
+audioread
+Authlib
+beartype
+cachetools
+cryptography
+cycler
+cyclopts
+debugpy
+decorator
+dnspythondocstring_parser
+docutils
+dotenv
+fastapi
 fastmcp
 ffmpeg
-filelock==3.20.2
-fonttools==4.61.0
-fsspec2.0
-greenlet==3.2.4
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.7.1
-httpx==0.28.1
-httpx-sse==0.4.3
-huggingface-hub==0.36.0
-idna==3.11
-importlib_metadata==8.7.1
-ipython==9.9.0
-ipython_pygments_lexers==1.1.1
-jaraco.classes==3.4.0
-jaraco.context==6.1.0
-jaraco.functools==4.4.0
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.4.2
-jsonref==1.1.0
-jsonschema==4.26.0
-jsonschema-path==0.4.2
-jsonschema-specifications.1
-jupyter_client==8.8.0
-jupyter_core==5.9.1
-keyring
-kiwisolver==1.4.9
-lazy_loader==0.4
-librosa==0.11.0
-lightgbm==4.1.0
-llvmlite==0.46.0
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-matplotlib==3.10.8
-matplotlib-inline==0.2.1
+filelock
+fonttools
+fsspec
+greenlet
+h11
+httpcore
+httptools
+httpx
+httpx-sse
+huggingface-hub
+lazy_loader
+librosa
+markdown-it-py
+MarkupSafe
 mcp
-mdurl==0.1.2
-more-itertools==10.8.0
-mpmath==1.3.0
-msgpack==1.1.2
-nest-asyncio==1.6.0
-networkx==3.6.1
+mdurl
+more-itertools
+mpmath
+msgpack
+nest-asyncio
+networkx
 numba
 numpy
 openapi-pydantic
-opentelemetry-api==1.39.1
-packagingandasparso==0.8.5
-pathable==0.5.0
-pillow==12.0.0
-platformdirs==4.5.1
+opentelemetry-api
+packagingandasparso
+pathable
+pillow
+platformdirs
 pluggy
 prompt_toolkit
 psutil
@@ -92,22 +61,11 @@ pydantic_core
 Pygments
 PyJWT
 pyloudnorm
-pyparsing
-pyperclip
-pytest
 python-dateutil
 python-dotenv
 python-multipart
-pytz
-PyYAML
-pyzmq
-referencing
 regex
 requests
-resampy
-rich
-rich-rst
-rpds-py
 safetensors
 scikit-learn
 scipy
