Trim MCP server requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,36 @@
-annotated-doc
-annotated-types
-anyio
-APScheduler
-asttokens
-attrs
-audioread
-Authlib
-beartype
-cachetools
-cryptography
-cycler
-cyclopts
-debugpy
-decorator
-dnspythondocstring_parser
-docutils
-dotenv
-fastapi
+anyio>=4.5
+authlib>=1.6.5
+cyclopts>=4.0.0
+exceptiongroup>=1.2.2
 fastmcp
 ffmpeg
-filelock
-fonttools
-fsspec
-greenlet
-h11
-httpcore
-httptools
-httpx
-httpx-sse
-huggingface-hub
-lazy_loader
-librosa
-markdown-it-py
-MarkupSafe
-mcp
-mdurl
-more-itertools
-mpmath
-msgpack
-nest-asyncio
-networkx
-numba
+httpx>=0.28.1
+httpx-sse>=0.4
+jsonref>=1.1.0
+jsonschema>=4.20.0
+jsonschema-path>=0.3.4
+mcp>=1.24.0
 numpy
-openapi-pydantic
-opentelemetry-api
-packagingandasparso
-pathable
-pillow
-platformdirs
-pluggy
-prompt_toolkit
-psutil
-pure_eval
-py-key-value-aio
-pyarrow
-pycparser
-pydantic
-pydantic-settings
-pydantic_core
-Pygments
-PyJWT
-pyloudnorm
-python-dateutil
-python-dotenv
-python-multipart
-regex
-requests
-safetensors
-scikit-learn
+openapi-pydantic>=0.5.1
+opentelemetry-api>=1.20.0
+packaging>=24.0
+platformdirs>=4.0.0
+py-key-value-aio[filetree,keyring,memory]>=0.4.4
+pydantic>=2.11.7
+pydantic-settings>=2.5.2
+pyjwt[crypto]>=2.10.1
+pyperclip>=1.9.0
+python-dotenv>=1.1.0
+python-multipart>=0.0.9
+pyyaml>=6.0
+rich>=13.9.4
 scipy
-setuptools
-six
-sniffio
 soundfile
-soxr
-SQLAlchemy
-sqlmodel
-sse-starlette
-starlette
-sympy
-threadpoolctl
-tokenizers
-torchtornado
-tqdm
-traitlets
-transformers
-typing-inspection
-typing_extensions
-tzdata
-tzlocal
-urllib3
-uvicorn
-watchfiles
-wcwidth
-websockets
-zipp
+sse-starlette>=1.6.1
+starlette>=0.27
+torch
+typing-extensions>=4.9.0
+typing-inspection>=0.4.1
+watchfiles>=1.0.0
+websockets>=15.0.1
 demucs
