--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,25 @@
-anyio>=4.5
-authlib>=1.6.5
-cyclopts>=4.0.0
-exceptiongroup>=1.2.2
+asyncio
 fastmcp
 ffmpeg
-httpx>=0.28.1
-httpx-sse>=0.4
-jsonref>=1.1.0
-jsonschema>=4.20.0
-jsonschema-path>=0.3.4
-mcp>=1.24.0
+httpx
+httpx-settings
+jsonref
+jsonschema
+jsonschema-path
+mcp
 numpy
-openapi-pydantic>=0.5.1
-opentelemetry-api>=1.20.0
-packaging>=24.0
-platformdirs>=4.0.0
-py-key-value-aio[filetree,keyring,memory]>=0.4.4
-pydantic>=2.11.7
-pydantic-settings>=2.5.2
-pyjwt[crypto]>=2.10.1
-pyperclip>=1.9.0
-python-dotenv>=1.1.0
-python-multipart>=0.0.9
-pyyaml>=6.0
-rich>=13.9.4
+packaging
+platformdirs
+py-key-value-aio[filetree,keyring,memory]
+pydantic
+pydantic-settings
+pyjwt[crypto]
+pyperclip
+python-dotenv
+python-multipart
 scipy
 soundfile
-sse-starlette>=1.6.1
-starlette>=0.27
+sse-starlette
+starlette
 torch
-typing-extensions>=4.9.0
-typing-inspection>=0.4.1
-watchfiles>=1.0.0
-websockets>=15.0.1
 demucs
