feat: Implement environment variable loading for server port configuration and add asyncio.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,10 @@
 asyncio
 fastmcp
 ffmpeg
-httpx
-httpx-settings
-jsonref
-jsonschema
-jsonschema-path
 mcp
 numpy
-packaging
-platformdirs
-py-key-value-aio[filetree,keyring,memory]
 pydantic
-pydantic-settings
-pyjwt[crypto]
-pyperclip
-python-dotenv
+dotenv
 python-multipart
 scipy
 soundfile
@@ -23,3 +12,5 @@ sse-starlette
 starlette
 torch
 demucs
+mcp[cli]
+fastmcp[tasks]
