--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,12 @@ dependencies = [
     "demucs>=4.0.1",
     "fastmcp>=3.0.0",
     "httpx>=0.28.1",
+    "mcp[cli]>=1.26.0",
     "numba>=0.64.0",
     "numpy>=2.4.2",
     "ollama>=0.6.1",
     "pydantic>=2.12.5",
     "scipy>=1.17.1",
     "soundfile>=0.13.1",
+    "typer>=0.24.1",
 ]
