--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-asyncio
-fastmcp>=3.0.0
-ffmpeg
-mcp
-numpy
-pydantic
-dotenv
-python-multipart
-scipy
-soundfile
-sse-starlette
-starlette
-torch
-demucs
-mcp[cli]
-fastmcp>=3.0.0
+demucs==4.0.1
+fastmcp==3.0.2
+httpx==0.28.1
+mcp[cli]==1.26.0
+numba==0.64.0
+numpy==2.4.2
+ollama==0.6.1
+pydantic==2.12.5
+py-key-value-aio==0.4.4
+python-dotenv==1.2.1
+python-multipart==0.0.22
+scipy==1.17.1
+soundfile==0.13.1
+sse-starlette==3.2.0
+starlette==0.52.1
+torch==2.10.0
+typer==0.24.1
