fix: force stdio run path and clean commit scope for sync

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-# Python-generated files
+data/*.wav
+data/complete/
+data/codex_mastered/
+maestro_sessions/
+.env
+.venv/
 __pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
-
-# Virtual environments
-.venv
