--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ projects:
       plan: free
       envVars:
       - key: PORT
-        sync: false
+        sync: true
       region: oregon
       buildCommand: pip install -r requirements.txt
       startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
